[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/Bomb.gd" type="Script" id=1]
[ext_resource path="res://Image_Imports/Bomb.png" type="Texture" id=2]
[ext_resource path="res://Image_Imports/Explosion SpriteSheet.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "BOOM",
"speed": 20.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
height = 48.0

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 36, 39 )

[sub_resource type="CapsuleShape2D" id=18]
radius = 14.0

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.996078, 0.537255, 0, 1 )
scale = Vector2( 2, 2 )
frames = SubResource( 15 )
animation = "BOOM"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.976471, 0.0313726, 0.0313726, 1 )
texture = ExtResource( 2 )

[node name="Explosion" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explosion"]
position = Vector2( 0, 3 )
shape = SubResource( 17 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 18 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Explosion" to="." method="_on_Explosion_body_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
